Добавлена реализация сервисного слоя интеграционные тесты
- Добавлены комплексные модульные тесты с Mockito
- Настроен pom.xml со всеми необходимыми зависимостямит